parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmts
Rule 2     stmts -> stmt
Rule 3     stmts -> stmts stmt
Rule 4     stmt -> bloco_SEQ
Rule 5     stmt -> bloco_PAR
Rule 6     stmt -> atribuicao
Rule 7     stmt -> bloco_IF
Rule 8     stmt -> bloco_WHILE
Rule 9     stmt -> input_stmt
Rule 10    stmt -> output_stmt
Rule 11    stmt -> send_stmt
Rule 12    stmt -> receive_stmt
Rule 13    bloco_SEQ -> SEQ LBRACE stmts RBRACE
Rule 14    bloco_PAR -> PAR LBRACE stmts RBRACE
Rule 15    atribuicao -> ID EQUALS expr
Rule 16    bloco_IF -> IF LPAREN expr RPAREN LBRACE stmts RBRACE
Rule 17    bloco_IF -> IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
Rule 18    bloco_WHILE -> WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
Rule 19    input_stmt -> INPUT LPAREN ID RPAREN
Rule 20    output_stmt -> OUTPUT LPAREN output_args RPAREN
Rule 21    output_args -> expr
Rule 22    output_args -> STRING
Rule 23    output_args -> output_args COMMA expr
Rule 24    output_args -> output_args COMMA STRING
Rule 25    send_stmt -> SEND LPAREN C_CHANNEL COMMA expr RPAREN
Rule 26    receive_stmt -> RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN
Rule 27    expr -> INT
Rule 28    expr -> ID
Rule 29    expr -> expr PLUS expr
Rule 30    expr -> expr MINUS expr
Rule 31    expr -> expr TIMES expr
Rule 32    expr -> expr DIVIDE expr
Rule 33    expr -> expr EQUALS_EQUALS expr
Rule 34    expr -> expr NOT_EQUALS expr
Rule 35    expr -> expr LESS_THAN expr
Rule 36    expr -> expr GREATER_THAN expr
Rule 37    expr -> expr LESS_THAN_EQUALS expr
Rule 38    expr -> expr GREATER_THAN_EQUALS expr
Rule 39    expr -> expr DOT ID

Terminals, with rules where they appear

COMMA                : 23 24 25 26
C_CHANNEL            : 25 26
DIVIDE               : 32
DOT                  : 39
ELSE                 : 17
EQUALS               : 15
EQUALS_EQUALS        : 33
GREATER_THAN         : 36
GREATER_THAN_EQUALS  : 38
ID                   : 15 19 26 28 39
IF                   : 16 17
INPUT                : 19
INT                  : 27
LBRACE               : 13 14 16 17 17 18
LESS_THAN            : 35
LESS_THAN_EQUALS     : 37
LPAREN               : 16 17 18 19 20 25 26
MINUS                : 30
NOT_EQUALS           : 34
OUTPUT               : 20
PAR                  : 14
PLUS                 : 29
RBRACE               : 13 14 16 17 17 18
RECEIVE              : 26
RPAREN               : 16 17 18 19 20 25 26
SEND                 : 25
SEQ                  : 13
STRING               : 22 24
TIMES                : 31
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

atribuicao           : 6
bloco_IF             : 7
bloco_PAR            : 5
bloco_SEQ            : 4
bloco_WHILE          : 8
expr                 : 15 16 17 18 21 23 25 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39
input_stmt           : 9
output_args          : 20 23 24
output_stmt          : 10
program              : 0
receive_stmt         : 12
send_stmt            : 11
stmt                 : 2 3
stmts                : 1 3 13 14 16 17 17 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmts
    (2) stmts -> . stmt
    (3) stmts -> . stmts stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21

    program                        shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3
    bloco_SEQ                      shift and go to state 4
    bloco_PAR                      shift and go to state 5
    atribuicao                     shift and go to state 6
    bloco_IF                       shift and go to state 7
    bloco_WHILE                    shift and go to state 8
    input_stmt                     shift and go to state 9
    output_stmt                    shift and go to state 10
    send_stmt                      shift and go to state 11
    receive_stmt                   shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> stmts .
    (3) stmts -> stmts . stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    $end            reduce using rule 1 (program -> stmts .)
    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21

    stmt                           shift and go to state 22
    bloco_SEQ                      shift and go to state 4
    bloco_PAR                      shift and go to state 5
    atribuicao                     shift and go to state 6
    bloco_IF                       shift and go to state 7
    bloco_WHILE                    shift and go to state 8
    input_stmt                     shift and go to state 9
    output_stmt                    shift and go to state 10
    send_stmt                      shift and go to state 11
    receive_stmt                   shift and go to state 12

state 3

    (2) stmts -> stmt .

    SEQ             reduce using rule 2 (stmts -> stmt .)
    PAR             reduce using rule 2 (stmts -> stmt .)
    ID              reduce using rule 2 (stmts -> stmt .)
    IF              reduce using rule 2 (stmts -> stmt .)
    WHILE           reduce using rule 2 (stmts -> stmt .)
    INPUT           reduce using rule 2 (stmts -> stmt .)
    OUTPUT          reduce using rule 2 (stmts -> stmt .)
    SEND            reduce using rule 2 (stmts -> stmt .)
    RECEIVE         reduce using rule 2 (stmts -> stmt .)
    $end            reduce using rule 2 (stmts -> stmt .)
    RBRACE          reduce using rule 2 (stmts -> stmt .)


state 4

    (4) stmt -> bloco_SEQ .

    SEQ             reduce using rule 4 (stmt -> bloco_SEQ .)
    PAR             reduce using rule 4 (stmt -> bloco_SEQ .)
    ID              reduce using rule 4 (stmt -> bloco_SEQ .)
    IF              reduce using rule 4 (stmt -> bloco_SEQ .)
    WHILE           reduce using rule 4 (stmt -> bloco_SEQ .)
    INPUT           reduce using rule 4 (stmt -> bloco_SEQ .)
    OUTPUT          reduce using rule 4 (stmt -> bloco_SEQ .)
    SEND            reduce using rule 4 (stmt -> bloco_SEQ .)
    RECEIVE         reduce using rule 4 (stmt -> bloco_SEQ .)
    $end            reduce using rule 4 (stmt -> bloco_SEQ .)
    RBRACE          reduce using rule 4 (stmt -> bloco_SEQ .)


state 5

    (5) stmt -> bloco_PAR .

    SEQ             reduce using rule 5 (stmt -> bloco_PAR .)
    PAR             reduce using rule 5 (stmt -> bloco_PAR .)
    ID              reduce using rule 5 (stmt -> bloco_PAR .)
    IF              reduce using rule 5 (stmt -> bloco_PAR .)
    WHILE           reduce using rule 5 (stmt -> bloco_PAR .)
    INPUT           reduce using rule 5 (stmt -> bloco_PAR .)
    OUTPUT          reduce using rule 5 (stmt -> bloco_PAR .)
    SEND            reduce using rule 5 (stmt -> bloco_PAR .)
    RECEIVE         reduce using rule 5 (stmt -> bloco_PAR .)
    $end            reduce using rule 5 (stmt -> bloco_PAR .)
    RBRACE          reduce using rule 5 (stmt -> bloco_PAR .)


state 6

    (6) stmt -> atribuicao .

    SEQ             reduce using rule 6 (stmt -> atribuicao .)
    PAR             reduce using rule 6 (stmt -> atribuicao .)
    ID              reduce using rule 6 (stmt -> atribuicao .)
    IF              reduce using rule 6 (stmt -> atribuicao .)
    WHILE           reduce using rule 6 (stmt -> atribuicao .)
    INPUT           reduce using rule 6 (stmt -> atribuicao .)
    OUTPUT          reduce using rule 6 (stmt -> atribuicao .)
    SEND            reduce using rule 6 (stmt -> atribuicao .)
    RECEIVE         reduce using rule 6 (stmt -> atribuicao .)
    $end            reduce using rule 6 (stmt -> atribuicao .)
    RBRACE          reduce using rule 6 (stmt -> atribuicao .)


state 7

    (7) stmt -> bloco_IF .

    SEQ             reduce using rule 7 (stmt -> bloco_IF .)
    PAR             reduce using rule 7 (stmt -> bloco_IF .)
    ID              reduce using rule 7 (stmt -> bloco_IF .)
    IF              reduce using rule 7 (stmt -> bloco_IF .)
    WHILE           reduce using rule 7 (stmt -> bloco_IF .)
    INPUT           reduce using rule 7 (stmt -> bloco_IF .)
    OUTPUT          reduce using rule 7 (stmt -> bloco_IF .)
    SEND            reduce using rule 7 (stmt -> bloco_IF .)
    RECEIVE         reduce using rule 7 (stmt -> bloco_IF .)
    $end            reduce using rule 7 (stmt -> bloco_IF .)
    RBRACE          reduce using rule 7 (stmt -> bloco_IF .)


state 8

    (8) stmt -> bloco_WHILE .

    SEQ             reduce using rule 8 (stmt -> bloco_WHILE .)
    PAR             reduce using rule 8 (stmt -> bloco_WHILE .)
    ID              reduce using rule 8 (stmt -> bloco_WHILE .)
    IF              reduce using rule 8 (stmt -> bloco_WHILE .)
    WHILE           reduce using rule 8 (stmt -> bloco_WHILE .)
    INPUT           reduce using rule 8 (stmt -> bloco_WHILE .)
    OUTPUT          reduce using rule 8 (stmt -> bloco_WHILE .)
    SEND            reduce using rule 8 (stmt -> bloco_WHILE .)
    RECEIVE         reduce using rule 8 (stmt -> bloco_WHILE .)
    $end            reduce using rule 8 (stmt -> bloco_WHILE .)
    RBRACE          reduce using rule 8 (stmt -> bloco_WHILE .)


state 9

    (9) stmt -> input_stmt .

    SEQ             reduce using rule 9 (stmt -> input_stmt .)
    PAR             reduce using rule 9 (stmt -> input_stmt .)
    ID              reduce using rule 9 (stmt -> input_stmt .)
    IF              reduce using rule 9 (stmt -> input_stmt .)
    WHILE           reduce using rule 9 (stmt -> input_stmt .)
    INPUT           reduce using rule 9 (stmt -> input_stmt .)
    OUTPUT          reduce using rule 9 (stmt -> input_stmt .)
    SEND            reduce using rule 9 (stmt -> input_stmt .)
    RECEIVE         reduce using rule 9 (stmt -> input_stmt .)
    $end            reduce using rule 9 (stmt -> input_stmt .)
    RBRACE          reduce using rule 9 (stmt -> input_stmt .)


state 10

    (10) stmt -> output_stmt .

    SEQ             reduce using rule 10 (stmt -> output_stmt .)
    PAR             reduce using rule 10 (stmt -> output_stmt .)
    ID              reduce using rule 10 (stmt -> output_stmt .)
    IF              reduce using rule 10 (stmt -> output_stmt .)
    WHILE           reduce using rule 10 (stmt -> output_stmt .)
    INPUT           reduce using rule 10 (stmt -> output_stmt .)
    OUTPUT          reduce using rule 10 (stmt -> output_stmt .)
    SEND            reduce using rule 10 (stmt -> output_stmt .)
    RECEIVE         reduce using rule 10 (stmt -> output_stmt .)
    $end            reduce using rule 10 (stmt -> output_stmt .)
    RBRACE          reduce using rule 10 (stmt -> output_stmt .)


state 11

    (11) stmt -> send_stmt .

    SEQ             reduce using rule 11 (stmt -> send_stmt .)
    PAR             reduce using rule 11 (stmt -> send_stmt .)
    ID              reduce using rule 11 (stmt -> send_stmt .)
    IF              reduce using rule 11 (stmt -> send_stmt .)
    WHILE           reduce using rule 11 (stmt -> send_stmt .)
    INPUT           reduce using rule 11 (stmt -> send_stmt .)
    OUTPUT          reduce using rule 11 (stmt -> send_stmt .)
    SEND            reduce using rule 11 (stmt -> send_stmt .)
    RECEIVE         reduce using rule 11 (stmt -> send_stmt .)
    $end            reduce using rule 11 (stmt -> send_stmt .)
    RBRACE          reduce using rule 11 (stmt -> send_stmt .)


state 12

    (12) stmt -> receive_stmt .

    SEQ             reduce using rule 12 (stmt -> receive_stmt .)
    PAR             reduce using rule 12 (stmt -> receive_stmt .)
    ID              reduce using rule 12 (stmt -> receive_stmt .)
    IF              reduce using rule 12 (stmt -> receive_stmt .)
    WHILE           reduce using rule 12 (stmt -> receive_stmt .)
    INPUT           reduce using rule 12 (stmt -> receive_stmt .)
    OUTPUT          reduce using rule 12 (stmt -> receive_stmt .)
    SEND            reduce using rule 12 (stmt -> receive_stmt .)
    RECEIVE         reduce using rule 12 (stmt -> receive_stmt .)
    $end            reduce using rule 12 (stmt -> receive_stmt .)
    RBRACE          reduce using rule 12 (stmt -> receive_stmt .)


state 13

    (13) bloco_SEQ -> SEQ . LBRACE stmts RBRACE

    LBRACE          shift and go to state 23


state 14

    (14) bloco_PAR -> PAR . LBRACE stmts RBRACE

    LBRACE          shift and go to state 24


state 15

    (15) atribuicao -> ID . EQUALS expr

    EQUALS          shift and go to state 25


state 16

    (16) bloco_IF -> IF . LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> IF . LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE

    LPAREN          shift and go to state 26


state 17

    (18) bloco_WHILE -> WHILE . LPAREN expr RPAREN LBRACE stmts RBRACE

    LPAREN          shift and go to state 27


state 18

    (19) input_stmt -> INPUT . LPAREN ID RPAREN

    LPAREN          shift and go to state 28


state 19

    (20) output_stmt -> OUTPUT . LPAREN output_args RPAREN

    LPAREN          shift and go to state 29


state 20

    (25) send_stmt -> SEND . LPAREN C_CHANNEL COMMA expr RPAREN

    LPAREN          shift and go to state 30


state 21

    (26) receive_stmt -> RECEIVE . LPAREN C_CHANNEL COMMA ID RPAREN

    LPAREN          shift and go to state 31


state 22

    (3) stmts -> stmts stmt .

    SEQ             reduce using rule 3 (stmts -> stmts stmt .)
    PAR             reduce using rule 3 (stmts -> stmts stmt .)
    ID              reduce using rule 3 (stmts -> stmts stmt .)
    IF              reduce using rule 3 (stmts -> stmts stmt .)
    WHILE           reduce using rule 3 (stmts -> stmts stmt .)
    INPUT           reduce using rule 3 (stmts -> stmts stmt .)
    OUTPUT          reduce using rule 3 (stmts -> stmts stmt .)
    SEND            reduce using rule 3 (stmts -> stmts stmt .)
    RECEIVE         reduce using rule 3 (stmts -> stmts stmt .)
    $end            reduce using rule 3 (stmts -> stmts stmt .)
    RBRACE          reduce using rule 3 (stmts -> stmts stmt .)


state 23

    (13) bloco_SEQ -> SEQ LBRACE . stmts RBRACE
    (2) stmts -> . stmt
    (3) stmts -> . stmts stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21

    stmts                          shift and go to state 32
    stmt                           shift and go to state 3
    bloco_SEQ                      shift and go to state 4
    bloco_PAR                      shift and go to state 5
    atribuicao                     shift and go to state 6
    bloco_IF                       shift and go to state 7
    bloco_WHILE                    shift and go to state 8
    input_stmt                     shift and go to state 9
    output_stmt                    shift and go to state 10
    send_stmt                      shift and go to state 11
    receive_stmt                   shift and go to state 12

state 24

    (14) bloco_PAR -> PAR LBRACE . stmts RBRACE
    (2) stmts -> . stmt
    (3) stmts -> . stmts stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21

    stmts                          shift and go to state 33
    stmt                           shift and go to state 3
    bloco_SEQ                      shift and go to state 4
    bloco_PAR                      shift and go to state 5
    atribuicao                     shift and go to state 6
    bloco_IF                       shift and go to state 7
    bloco_WHILE                    shift and go to state 8
    input_stmt                     shift and go to state 9
    output_stmt                    shift and go to state 10
    send_stmt                      shift and go to state 11
    receive_stmt                   shift and go to state 12

state 25

    (15) atribuicao -> ID EQUALS . expr
    (27) expr -> . INT
    (28) expr -> . ID
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr EQUALS_EQUALS expr
    (34) expr -> . expr NOT_EQUALS expr
    (35) expr -> . expr LESS_THAN expr
    (36) expr -> . expr GREATER_THAN expr
    (37) expr -> . expr LESS_THAN_EQUALS expr
    (38) expr -> . expr GREATER_THAN_EQUALS expr
    (39) expr -> . expr DOT ID

    INT             shift and go to state 36
    ID              shift and go to state 34

    expr                           shift and go to state 35

state 26

    (16) bloco_IF -> IF LPAREN . expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> IF LPAREN . expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (27) expr -> . INT
    (28) expr -> . ID
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr EQUALS_EQUALS expr
    (34) expr -> . expr NOT_EQUALS expr
    (35) expr -> . expr LESS_THAN expr
    (36) expr -> . expr GREATER_THAN expr
    (37) expr -> . expr LESS_THAN_EQUALS expr
    (38) expr -> . expr GREATER_THAN_EQUALS expr
    (39) expr -> . expr DOT ID

    INT             shift and go to state 36
    ID              shift and go to state 34

    expr                           shift and go to state 37

state 27

    (18) bloco_WHILE -> WHILE LPAREN . expr RPAREN LBRACE stmts RBRACE
    (27) expr -> . INT
    (28) expr -> . ID
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr EQUALS_EQUALS expr
    (34) expr -> . expr NOT_EQUALS expr
    (35) expr -> . expr LESS_THAN expr
    (36) expr -> . expr GREATER_THAN expr
    (37) expr -> . expr LESS_THAN_EQUALS expr
    (38) expr -> . expr GREATER_THAN_EQUALS expr
    (39) expr -> . expr DOT ID

    INT             shift and go to state 36
    ID              shift and go to state 34

    expr                           shift and go to state 38

state 28

    (19) input_stmt -> INPUT LPAREN . ID RPAREN

    ID              shift and go to state 39


state 29

    (20) output_stmt -> OUTPUT LPAREN . output_args RPAREN
    (21) output_args -> . expr
    (22) output_args -> . STRING
    (23) output_args -> . output_args COMMA expr
    (24) output_args -> . output_args COMMA STRING
    (27) expr -> . INT
    (28) expr -> . ID
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr EQUALS_EQUALS expr
    (34) expr -> . expr NOT_EQUALS expr
    (35) expr -> . expr LESS_THAN expr
    (36) expr -> . expr GREATER_THAN expr
    (37) expr -> . expr LESS_THAN_EQUALS expr
    (38) expr -> . expr GREATER_THAN_EQUALS expr
    (39) expr -> . expr DOT ID

    STRING          shift and go to state 42
    INT             shift and go to state 36
    ID              shift and go to state 34

    output_args                    shift and go to state 40
    expr                           shift and go to state 41

state 30

    (25) send_stmt -> SEND LPAREN . C_CHANNEL COMMA expr RPAREN

    C_CHANNEL       shift and go to state 43


state 31

    (26) receive_stmt -> RECEIVE LPAREN . C_CHANNEL COMMA ID RPAREN

    C_CHANNEL       shift and go to state 44


state 32

    (13) bloco_SEQ -> SEQ LBRACE stmts . RBRACE
    (3) stmts -> stmts . stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    RBRACE          shift and go to state 45
    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21

    stmt                           shift and go to state 22
    bloco_SEQ                      shift and go to state 4
    bloco_PAR                      shift and go to state 5
    atribuicao                     shift and go to state 6
    bloco_IF                       shift and go to state 7
    bloco_WHILE                    shift and go to state 8
    input_stmt                     shift and go to state 9
    output_stmt                    shift and go to state 10
    send_stmt                      shift and go to state 11
    receive_stmt                   shift and go to state 12

state 33

    (14) bloco_PAR -> PAR LBRACE stmts . RBRACE
    (3) stmts -> stmts . stmt
    (4) stmt -> . bloco_SEQ
    (5) stmt -> . bloco_PAR
    (6) stmt -> . atribuicao
    (7) stmt -> . bloco_IF
    (8) stmt -> . bloco_WHILE
    (9) stmt -> . input_stmt
    (10) stmt -> . output_stmt
    (11) stmt -> . send_stmt
    (12) stmt -> . receive_stmt
    (13) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (14) bloco_PAR -> . PAR LBRACE stmts RBRACE
    (15) atribuicao -> . ID EQUALS expr
    (16) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (17) bloco_IF -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (18) bloco_WHILE -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (19) input_stmt -> . INPUT LPAREN ID RPAREN
    (20) output_stmt -> . OUTPUT LPAREN output_args RPAREN
    (25) send_stmt -> . SEND LPAREN C_CHANNEL COMMA expr RPAREN
    (26) receive_stmt -> . RECEIVE LPAREN C_CHANNEL COMMA ID RPAREN

    RBRACE          shift and go to state 46
    SEQ             shift and go to state 13
    PAR             shift and go to state 14
    ID              shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    INPUT           shift and go to state 18
    OUTPUT          shift and go to state 19
    SEND            shift and go to state 20
    RECEIVE         shift and go to state 21
